--- a/newform.html
+++ b/newform.html
@@ -9,12 +9,12 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMnyCMgsyl1PdK-1dOEjRRHuAUK4uPHZs&callback=initMap"></script>
 
-	<script src="js/Chart.js"></script>
-	<script src="js/Effect_Method.js" type="text/javascript"></script>
-	<script src="js/Map.js" type="text/javascript"></script>
-	<script src="js/Show_Tweets.js" type="text/javascript"></script>
-	<script src="js/myChart.js" type="text/javascript"></script>
-	<script src="js/count.js" type="text/javascript"></script>
+	<script src="./js/Chart.js"></script>
+	<script src="./js/Effect_Method.js" type="text/javascript"></script>
+	<script src="./js/Map.js" type="text/javascript"></script>
+	<script src="./js/Show_Tweets.js" type="text/javascript"></script>
+	<script src="./js/myChart.js" type="text/javascript"></script>
+	<script src="./js/count.js" type="text/javascript"></script>
 
 	<style type="text/css">
 
@@ -40,8 +40,8 @@
 
 	<div class="hm-nw-bnr-vid">
 		<div class="hm-nw-bnr-bk"></div>
-		<video autoplay preload="" style="width:100%;opacity: 1" onended="BackGournd_Vedio_Opacity()" id="video">
-			<source src="Video1.mp4">
+		<video autoplay preload="" style="width:100%;" onended="BackGournd_Vedio_Opacity()" id="video">
+			<source src="./Video1.mp4">
 			</video>
 		</div>
 
@@ -56,8 +56,8 @@
 								<input id="input" class="w3-input w3-border" type="text" name="query" value="" oninput="Input_Position()" autofocus><br>
 								<a class="Tip_Link" href="javascript:void(0)"  style="color: white">Tip</a>&emsp;
 								<label style="color: white">Using DataBase: </label><input name="api" id="add_type" type="checkbox" class="w3-check" value="on" checked="checked" onclick="changevalue();" />
-								<button class="w3-btn w3-black" id="Query_Tweets_Button">Query By Tweets</button>&emsp;
-								<button class="w3-btn w3-black" id="Query_Author_Button">Query By @Author</button>
+								<button class="w3-border w3-border-white w3-btn w3-black" id="Query_Tweets_Button">Query By Tweets</button>&emsp;
+								<button class="w3-border w3-border-white w3-btn w3-black" id="Query_Author_Button">Query By @Author</button>
 							</form>
 						</div>
 					</div>
@@ -70,9 +70,9 @@
 				</div>
 
 				<div class="w3-col m3">
-					<div id="User_Profile" style="margin-left:-2%;margin-top:3%;width:23%;opacity: 0;position: fixed;"></div>
+					<div id="User_Profile" style="margin-left:-2%;margin-top:3%;width:23%;display: : none;position: fixed;"></div>
 
-					<div id="chart" class="w3-panel w3-light-grey w3-round w3-border" style="margin-left:-2%;margin-top:4%;width: 23%;opacity: 0;position: fixed;">
+					<div id="chart" class="w3-panel w3-light-grey w3-round w3-border" style="margin-left:-2%;margin-top:4%;width: 23%;display: none;position: fixed;">
 						<canvas id="myChart" width="100%" height="80%" >
 						</canvas>
 					</div>
@@ -111,6 +111,14 @@
 
 		</div>
 
+		<div id="alert" class="w3-panel w3-red w3-display-container" style="position: absolute;left: 40%;top: 45%;display: none;">
+			<span onclick="this.parentElement.style.display='none'"
+			class="w3-button w3-red w3-large w3-display-topright">&times;</span>
+			<h3>Whoops!</h3>
+			<p>You have input wrong format query.</p>
+			<p>It should be @Username</p>
+		</div>
+
 
 		<script type="text/javascript">
 
@@ -121,8 +129,6 @@
 					data: data,
 					type: 'POST',
 					success: function (data) {
-
-						alert("xxx");
 
 						$("#TweetList").empty();
 						$("#User_Profile").empty();
@@ -135,7 +141,6 @@
 
 					},
 					error: function (xhr, status, error) {
-						alert("yyyyy");
 
 						console.log('Error: ' + error.message);
 					},
@@ -205,7 +210,8 @@
 					Query_Author();
 				}
 				else{
-					alert("Whoops! You have input wrong format query. \nIt should be @Username ");
+					var node = $("#alert");
+					node.css("display", "block");
 				}
 
 			}
