--- a/newform.html
+++ b/newform.html
@@ -76,6 +76,9 @@
 						<canvas id="myChart" width="100%" height="80%" >
 						</canvas>
 					</div>
+					<div style="position: fixed;left:95%;top: 90%;font-size: 50px">
+						<i class="fa fa-caret-square-o-up w3-right w3-btn" style="color: white" onclick="scroll(0,0);"></i>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -118,8 +121,7 @@
 			<p>You have input wrong format query.</p>
 			<p>It should be @Username</p>
 		</div>
-
-
+		
 		<script type="text/javascript">
 
 			function Send_Tweets_Query(url, data) {
